# diff-pbd

./: .gitignore  README.md  helhest_gradient_data.npz  pyproject.toml  sphere_throw_data_2.npz
data/: cylinder.py  cylinder.xml  pendulum.xml  pendulum2.py  pendulum2.xml  test.txt
data/box_restitution_comparison/: simulation.json
data/box_static_friction_comparison/: simulation.json
data/helhest/: base.mtl  wheel.mtl
data/helhest_grad/: simulation_sphere.json
data/sphere_bounce_grad/: simulation_sphere.json
data/sphere_bounce_grad_pos_x2/: simulation.json
data/sphere_bounce_grad_pos_x_gravity/: simulation.json
data/sphere_bounce_grad_pos_x_gravity_xpbd/: simulation.json
data/sphere_bounce_grad_pos_x_xpbd/: simulation.json
data/sphere_bounce_grad_pos_z/: simulation.json  simulation_sphere.json
data/sphere_bounce_grad_pos_z2/: simulation.json
data/sphere_bounce_grad_pos_z2_xpbd/: simulation.json
data/sphere_bounce_grad_pos_z_gravity/: simulation.json
data/sphere_bounce_grad_pos_z_gravity2/: simulation.json
data/sphere_bounce_grad_pos_z_gravity_xpbd/: simulation.json
data/sphere_throw_grad/: simulation_sphere.json
data/xpbd_compliance_comparison/: simulation.json
simulation/: box.json  cylinder.json  helhest.json  helhest_flat_ground.json  helhest_flat_ground_005.json  helhest_flat_ground_explicit_friction.json  helhest_flat_ground_implicit_friction.json  robot.json  sphere.json  sphere_grad.json  sphere_ground.json  sphere_throw_gradient.json
simulation/wheel_medium_obj/: ._baked_mesh_d2e63cf5.usda  (+1 more)
templates/: index.html
(+192 files in other folders)
