[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpbd"
version = "0.1.0"
description = "The Differentiable Position-Based Dynamics."
authors = [
    { name = "Aleš Kučera", email = "kuceral4@fel.cvut.cz" }
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
